crates/arity-formatter/tests/snapshots/formatter__function_definition_misc_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
function(
  a_really_long_argument_name_to_break_on,
  and_here_is_another_one_please_break_me,
  and_this
) {
  a
}

function(
  a = {
    1
  },
  b
) {
  1
}
