crates/arity-formatter/tests/snapshots/formatter__function_param_comment_before_comma_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
insertSource <- function(
  methods = if (missing(functions)) allMethods() else NULL,
  # classes = if (missing(functions)) allClasses() else NULL
  force = missing(functions) && missing(methods)
) {}
