crates/arity-formatter/tests/snapshots/formatter__function_param_default_if_else_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
g <- function(a = if (NROW(x) < NCOL(x)) 1e-2 else 1e-4) {
  check(a)
  a
}
