crates/arity-formatter/tests/snapshots/formatter__function_param_trailing_comment_space_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
f <- function(
  alias, ### char
  model
) {
  NULL
}
