crates/arity-formatter/tests/snapshots/formatter__if_bare_then_leading_comment_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
{
  x <- if (condition) {
    # before consequence
    consequence # after consequence
  } else {
    alternative
  }

  y <- if (condition) {
    # before consequence
    consequence
  } else {
    # before alternative
    alternative
  }
}
