crates/arity-formatter/tests/snapshots/formatter__if_block_leading_trailing_comments_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
x <- if (condition) {
  # before consequence
  # inside consequence
  # after consequence
  consequence
} else {
  # before alternative
  alternative
}
