crates/arity-formatter/tests/snapshots/formatter__if_block_position_boundary_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function() {
  g()
  if (a) 1
}
h <- function() {
  if (a) {
    1
  }
  g()
}
