crates/arity-formatter/tests/snapshots/formatter__if_branch_trailing_comment_width_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (is.data.frame(tmp)) {
  ans$right <- tmp[subset, ] ## doesn't do the drop=TRUE thing for factors/shingles
} else {
  ans$right <- other
}
