crates/arity-formatter/tests/snapshots/formatter__if_comment_wide_branch_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
{
  if (a) {
    some_function(
      argument_one,
      argument_two,
      argument_three,
      argument_four,
      arg_five
    )
  } else {
    # comment
    that
  }
}
