crates/arity-formatter/tests/snapshots/formatter__if_condition_trailing_comment_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (
  isFALSE(getOption("dplyr.show_progress", default = TRUE)) || # user specifies no progress
    !interactive() || # not an interactive session
    !is.null(getOption("knitr.in.progress")) # dplyr used within knitr document
) {
  return(invisible(self))
}
